# semantic-index

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml  run_phase0.py  run_pipeline.py  start.sh
.github/workflows/: charset-corpus-drift.yml  ci.yml  cross-cache-identity-flags.yml  deploy.yml
audit/: si_audit_summary.md  si_duplicate_artists.csv
data/: wxyc_artist_graph.db
deploy/: semantic-index-build.service  semantic-index-build.timer
docs/: architecture.md  audio-ingest.md  backend-service-backfill.md  deployment.md  development.md  eval-set-baseline-findings.md  eval-set-rubric.md  graph-api.md  narrative-enrichment-plan.md  narrative-enrichment-whitepaper.md  pipeline-optimizations.md  pipeline.md  proposal.md
explorer/: index.html  url-state.js  url-state.test.js
infra/: README.md  build-job.conf.example  build-job.yaml  deploy.sh
rust/sql-parser/: Cargo.toml
rust/sql-parser/src/: lib.rs
scripts/: audit_narratives.py  check_cross_cache_identity_flags.sh  check_sync_profile.sh  crawl_reviews.py  cron_sync.sh  deploy.sh  download_acousticbrainz.sh  ec2-build-conductor.sh  generate_api_models.sh  generate_canned_enrichment.py  import_acousticbrainz.py  import_xrefs.py  nightly_sync.py  process_archive.py  prune_acoustic_similarity.py  recover_audio_profiles.py  run_build_job.py  validate_graph_db.py
scripts/audit/: si_mojibake_scan.py
scripts/eval/: README.md  __init__.py  backscore.py  bait_pairs.json  build_bait_set.py  build_wrong_set.py  export_labeling.py  generate_narratives.py  merge_labels.py  sample_pairs.py
scripts/experiments/narrative/: README.md  calibrated_scoring_experiment.py  combo_mitigation_experiment.py  compare_neighbor_weighting.py  control_group_experiment.py  coverage_with_normalization.py  experiment_narrative_variants.py  generate_narrative_samples.py  generate_score_regenerate.py  hallucination_matrix_experiment.py  hallucination_risk_experiment.py  mitigation_experiment.py  scoring_methods_experiment.py  test_narrative_augmentation.py
semantic_index/: acousticbrainz.py  acousticbrainz_client.py  adjacency.py  archive_client.py  archive_essentia.py  archive_fingerprint.py  archive_match.py  artist_resolver.py  cross_reference.py  discogs_client.py  discogs_edges.py  discogs_enrichment.py  edge_prune.py  entity_store.py  facet_export.py  graph_export.py  graph_metrics.py  label_hierarchy.py  label_store.py  lml_identity.py  models.py  musicbrainz_client.py  narrative_audit.py  nightly_sync.py  node_attributes.py  pg_source.py  pipeline_db.py  pmi.py  reconciliation.py  sql_parser.py  sqlite_export.py  utils.py  wikidata_client.py  wikidata_influence.py
semantic_index/api/: __main__.py  app.py  bio.py  config.py  database.py  models.py  narrative.py  narrative_audit_routes.py  preview.py  routes.py  schemas.py  sync_scheduler.py
semantic_index/labeling_app/: __init__.py  __main__.py  app.py  row_source.py  storage.py
semantic_index/labeling_app/static/: index.html  labeling.css  labeling.js
tests/: charset_torture.py  conftest.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: canned_enrichment.json
tests/integration/: test_discogs_edges_sql.py  test_entity_migration.py  test_entity_source_fallback.py  test_entity_source_lml.py  test_entity_store_pipeline.py  test_pipeline.py
tests/unit/: test_acousticbrainz.py  test_acousticbrainz_client.py  test_adjacency.py  test_api.py  test_api_database.py  test_api_discovery.py  test_api_faceted.py  test_api_routes.py  test_app_sentry_init.py  test_archive_client.py  test_archive_essentia.py  test_archive_fingerprint.py  test_archive_match.py  test_artist_resolver.py  test_artist_resolver_rust.py  test_bio.py  test_charset_torture_roundtrip.py  test_cross_reference.py  test_deletion_audit.py  test_discogs_client.py  test_discogs_edges.py  test_discogs_edges_sql.py  test_discogs_enrichment.py  test_entity_dedup.py  test_entity_store.py  test_entity_store_crud.py  test_entity_store_labels.py  test_entity_store_models.py  test_entity_store_reconciliation.py  test_eval_backscore_metrics.py  test_eval_bait_set.py  test_eval_field_corruption.py  test_eval_merge_labels.py  test_eval_sample_pairs.py  test_facet_export.py  test_fallback_paths.py  test_graph_export.py  test_graph_metrics.py  test_import_acousticbrainz.py  test_label_hierarchy.py  (+33 more)
