[project]
name = "semantic-index"
version = "0.1.0"
description = "WXYC semantic artist graph from DJ transition data"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    {name = "WXYC Engineering"}
]

dependencies = [
    "networkx>=3.0",
    "scipy>=1.11",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.25",
    "wxyc-etl>=0.1.0",
]

[project.optional-dependencies]
api = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "anthropic>=0.40",
]
archive = [
    "pyacoustid>=1.3.0",
    "boto3>=1.28",
]
rust = [
    "wxyc-etl>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
    "black>=23.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "types-networkx>=3.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["semantic_index*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["scripts/", ".claude/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "wxyc_etl.*"
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["acoustid", "boto3", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "unit: pure logic tests, no external dependencies",
    "postgres: needs PostgreSQL (gated by DATABASE_URL_TEST)",
    "integration: needs external service or fixture data",
    "e2e: full pipeline end-to-end test",
    "parity: old vs new implementation comparison",
]
addopts = "-m 'not integration and not postgres and not e2e and not parity'"
console_output_style = "progress"
testpaths = ["tests"]
pythonpath = ["."]
