[project]
name = "semantic-index"
version = "0.1.0"
description = "WXYC semantic artist graph from DJ transition data"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    {name = "WXYC Engineering"}
]

dependencies = [
    "networkx>=3.0",
    "scipy>=1.11",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.25",
    "wxyc-etl>=0.1.0",
]

[project.optional-dependencies]
api = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "anthropic>=0.40",
]
archive = [
    "boto3>=1.28",
    "essentia-tensorflow>=2.1b6",
]
rust = [
    "wxyc-etl>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "types-networkx>=3.0",
    "datamodel-code-generator[http]>=0.26.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["semantic_index*", "generated*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["scripts/", ".claude/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"generated/*" = ["N815"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "wxyc_etl.*"
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "generated.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "essentia", "essentia.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# ci-sync-skip: slow reason: perf benchmarks (test_artist_resolver_rust); manual-only
# Architecture A markers (see plans/test-patterns.md Section 3): markers route CI by
# infrastructure; directories document tier. `integration` is a transitional declaration
# kept so the four entity_store/entity_source files still using `pytestmark =
# pytest.mark.integration` (`test_entity_migration`, `test_entity_source_lml`,
# `test_entity_store_pipeline`, `test_entity_source_fallback`) still parse cleanly.
# The first three are `--ignore`d in CI (deleted-module imports); the fourth is owned
# by PR #192's entity-source rework, which is why this PR doesn't touch it. Drop the
# `integration` marker (and its CI job) once PR #192 has landed and the three ignored
# files have been ported or deleted by their owning workstream.
# TODO: remove `integration` marker after PR #192 lands; grep for `entity_store`.
markers = [
    "pg: needs a PostgreSQL service (DATABASE_URL_TEST or DATABASE_URL_DISCOGS)",
    "slow: takes longer than ~10s (orthogonal to infra)",
    "integration: transitional marker for entity_store/entity_source files; see TODO above",
]
addopts = "-m 'not pg and not slow and not integration'"
console_output_style = "progress"
testpaths = ["tests"]
pythonpath = ["."]
